# kde-portal-platformtheme

./: .gitignore  CMakeLists.txt  README.md  kde_portal.cpp  kde_portal_plasma.cpp  plugin_metadata.json  plugin_metadata_plasma.json
kcolorscheme/: kde_palette.cpp  kde_palette.h
kguiaddons/: kde_color_utils.cpp  kde_color_utils.h
portal/: kde_portal_settings.cpp  kde_portal_settings.h
